--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           :  "https://github.com/PotatoJnny"
+  github           :  "PotatoJnny"
   google_plus      :
   keybase          :
   instagram        :
