--- a/_config.yml
+++ b/_config.yml
@@ -146,7 +146,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
-# mimic GitHub Pages with --safe
+  - jekyll-seo-tag
 whitelist:
   - jekyll-paginate
   - jekyll-sitemap
