--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,15 +1,15 @@
 main:
   - title: "About Me"
-    url: "/#about-me"          # you already have <span id='about-me'></span>
+    url: "/#-about-me"          # you already have <span id='about-me'></span>
 
   - title: "News"
-    url: "/#news"              # matches the auto-generated anchor for "## News"
+    url: "/#-news"              # matches the auto-generated anchor for "## News"
 
   - title: "Publications"
-    url: "/#publications"      # matches "## Publications"
+    url: "/#-publications"      # matches "## Publications"
 
   - title: "Services"
-    url: "/#services"          # matches "## Services"
+    url: "/#-services"          # matches "## Services"
 
   - title: "Teaching"
-    url: "/#teaching"          # matches "## Teaching"
+    url: "/#-teaching"          # matches "## Teaching"
