--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,3 +13,6 @@ main:
 
   - title: "Teaching"
     url: "/#teaching"          # matches "## Teaching"
+
+  - title: "CV"
+    url: "/CV/main.pdf"  
